--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "flowbite": "^1.5.3",
+    "flowbite-react": "^0.2.0",
     "next": "^12.2.2",
     "next-seo": "^5.4.0",
     "react": "^18.2.0",
