--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "next": "^12.2.2",
     "next-seo": "^5.4.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sass": "^1.55.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.0.3",
@@ -69,7 +70,7 @@
     "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
     "start-server-and-test": "^1.14.0",
-    "tailwindcss": "^3.1.6",
+    "tailwindcss": "^3.2.1",
     "typescript": "^4.7.4"
   },
   "author": "Ixartz (https://github.com/ixartz)"
