--- a/package.json
+++ b/package.json
@@ -19,13 +19,23 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.10",
+    "axios": "^1.2.1",
+    "bootstrap": "^5.2.3",
     "flowbite": "^1.5.3",
     "flowbite-react": "^0.2.0",
+    "js-cookie": "^3.0.1",
+    "jwt-decode": "^3.1.2",
     "next": "^12.2.2",
     "next-seo": "^5.4.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
-    "sass": "^1.55.0"
+    "react-hook-form": "^7.40.0",
+    "react-loading-skeleton": "^3.1.0",
+    "sass": "^1.55.0",
+    "swr": "^2.0.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.0.3",
@@ -35,6 +45,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@types/jest": "^28.1.5",
+    "@types/js-cookie": "^3.0.2",
     "@types/node": "^18.0.4",
     "@types/react": "^18.0.15",
     "@typescript-eslint/eslint-plugin": "^5.30.6",
