--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 /** @type {import('tailwindcss').Config} */
 module.exports = {
-    content: ['./src/**/*.{js,ts,jsx,tsx}', 'node_modules/flowbite-react/**/*.{js,jsx,ts,tsx}', ],
+    content: ['./src /**/*.{js,ts,jsx,tsx
+        }', 'node_modules/flowbite-react /**/*.{js,jsx,ts,tsx
+        }',
+    ],
     theme: {
         fontSize: {
             xs: '0.75rem',
@@ -42,5 +45,6 @@ module.exports = {
         },
     },
     // eslint-disable-next-line global-require
-    plugins: [require('tailwindcss'), require('flowbite/plugin')],
+    plugins: [require('tailwindcss'), require('flowbite/plugin')
+    ],
 };
