--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "cypress:headless": "cypress run",
     "e2e": "start-server-and-test dev http://localhost:3000 cypress",
     "e2e:headless": "start-server-and-test dev http://localhost:3000 cypress:headless",
-    "prepare": ""
+    "prepare": "husky install"
   },
   "dependencies": {
     "@hookform/resolvers": "^2.9.10",
@@ -73,6 +73,7 @@
     "eslint-plugin-tailwindcss": "^3.6.0",
     "eslint-plugin-testing-library": "^5.5.1",
     "eslint-plugin-unused-imports": "^2.0.0",
+    "husky": "^8.0.1",
     "jest": "^28.1.3",
     "jest-environment-jsdom": "^28.1.3",
     "lint-staged": "^13.0.3",
