--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 /** @type {import('tailwindcss').Config} */
 module.exports = {
+    "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": true
+  },
     content: ['./src /**/*.{js,ts,jsx,tsx
         }', 'node_modules/flowbite-react /**/*.{js,jsx,ts,tsx
         }',
