--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-hook-form": "^7.40.0",
     "react-loading-skeleton": "^3.1.0",
     "sass": "^1.55.0",
+    "swiper": "^9.3.2",
     "swr": "^2.0.0",
     "yup": "^0.32.11"
   },
